# senselosc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
apps/: CMakeLists.txt  mySensel-test.cpp  sensel-test.cpp  senselosc.cpp
cmake/: FindSensel.cmake  findSensel.cmake
docs/: mainpage.md
include/sensosc/: Morph.hpp
src/: CMakeLists.txt  Morph.cpp  main.cpp
tests/: CMakeLists.txt
